examples/typechecking/missing_implicit_import.an
import Std.HashMap.HashMap
import Std.Fail.or_panic

main () =
    map: HashMap U8 I32 = HashMap.empty ()
    // Error here should suggest importing `hash_u8`
    elem = map.get (ref 4) ~> or_panic "map get failed"
    println elem

// Found 1 error and 0 warnings

// args: --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/missing_implicit_import.an:7:15
// 6 |     // Error here should suggest importing `hash_u8`
//   |     // error: No implicit found for type Hash U8 required by get
// 7 |     elem = map.get (ref 4) ~> or_panic "map get failed"
//   |               ^^^^
// 8 |     println elem
//   = note: did you mean to import Std.Hash.hash_u8?
// 
// Found 1 error and 0 warnings

